ingress.yaml
apiVersion: voyager.appscode.com/v1beta1
kind: Ingress
metadata:
  name: edge
  namespace: "default"
  annotations:
    kubernetes.io/ingress.class: "voyager"
    ingress.appscode.com/type: NodePort
    ingress.appscode.com/ssl-passthrough: "true"
spec:
  rules:
  - tcp:
      port: '80'
      nodePort: "30001"
      backend:
        serviceName: edge
        servicePort: 8080
  - tcp:
      port: '443'
      nodePort: "30000"
      backend:
        serviceName: edge
        servicePort: 8080
